@@ -1,0 +1,5 @@
+
+update.simplejags <- function(object, n.iter=1000, n.thin=1, ...){
+  
+  
+}
