@@ -1,20 +1,20 @@
-\name{simplejags}
+\name{jags}
 \docType{class}
 % Classes
 \alias{simplejags-class}
 % functions
+\alias{jags}
 \alias{simplejags}
 
 
 \title{Call JAGS from R}
 \description{
-  The \code{simplejags} function is a basic wrapper for running JAGS analyses in package \code{rjags}.  
-  The user provides a model file, data, initial values (optional), and parameters to save. The function
-  compiles the information and sends it to \code{JAGS}, then consolidates and summarizes the MCMC output.
+  The \code{jags} function is a basic wrapper for running JAGS analyses in package \code{rjags} inspired by similar packages like \code{R2WinBUGS}, \code{R2OpenBUGS}, and \code{R2jags}. The user provides a model file, data, initial values (optional), and parameters to save. The function
+  compiles the information and sends it to \code{JAGS}, then consolidates and summarizes the MCMC output in an object of class \code{simplejags}.
 }
 
 \usage{
-simplejags(data, inits, parameters.to.save, model.file,
+jags(data, inits, parameters.to.save, model.file,
   n.chains, n.adapt=100, n.iter, n.burnin=0, n.thin=1, DIC=TRUE, store.data=FALSE,
   seed=floor(runif(1,1,10000)), bugs.format=FALSE)}
 
@@ -33,9 +33,9 @@ simplejags(data, inits, parameters.to.save, model.file,
   \item{n.burnin}{Number of iterations at the beginning of the chain to discard (i.e., the burn-in). Does not include the adaptive phase iterations.}
   \item{n.thin}{Thinning rate. Must be a positive integer.}
   \item{DIC}{Option to report DIC and the estimated number of parameters (pD). Defaults to TRUE.}
-  \item{store.data}{Option to store the input dataset and initial values in the model output object for future use. Defaults to FALSE.}
-  \item{seed}{Set a custom seed for the R random number generator. The current state of the random number generator is saved in the model object.}
-  \item{bugs.format}{Option to print JAGS output in classic R2WinBUGS format. Default is FALSE yielding the default simplejags print method.}
+  \item{store.data}{Option to store the input dataset and initial values in the output object for future use. Defaults to FALSE.}
+  \item{seed}{Set a custom seed for the R random number generator. The current state of the random number generator is saved in the output object.}
+  \item{bugs.format}{Option to print JAGS output in classic R2WinBUGS format. Default is FALSE.}
 }
 
 \author{ 
