@@ -1,3 +1,7 @@
+Changes from Version 0.01-4 to 0.01-5 [6-May-2014]
+
+Bugfixes. Changed primary function name to 'jags' from 'simplejags' for simplicity. Also edited several other function names. Added a summary table to the output object.
+
 Changes from Version 0.01-3 to 0.01-4 [1-May-2014]
 
 Improve processing of input data to avoid some common errors. Changed traceplots() function to traceplot() to be more consistent with similar packages. Added ability to calculate DIC and pD for JAGS models. Cleaned up the print method.
